# kookaburra

./: .gitignore  CLAUDE.md  Cargo.toml  NOTES.md  README.md  SESSION_SUMMARY.md
.github/workflows/: ci.yml
crates/kookaburra-app/: Cargo.toml
crates/kookaburra-app/src/: git.rs  main.rs  particles.rs
crates/kookaburra-core/: Cargo.toml
crates/kookaburra-core/src/: action.rs  config.rs  ids.rs  keybinding.rs  layout.rs  lib.rs  snapshot.rs  state.rs  worktree.rs
crates/kookaburra-pty/: Cargo.toml
crates/kookaburra-pty/src/: lib.rs
crates/kookaburra-render/: Cargo.toml
crates/kookaburra-render/src/: glyph.wgsl  glyph_pipeline.rs  lib.rs
crates/kookaburra-ui/: Cargo.toml
crates/kookaburra-ui/src/: lib.rs
docs/: next_steps.md  original_chat
docs/design/: kookabura_html.html
docs/design/Kookaburra/: components.jsx  data.js  index.html  kooka.jsx  pixel.css  v2-pixel.html
docs/design/Kookaburra/scraps/: sketch-2026-04-18T04-31-17-6pfs2b.napkin
docs/design/Kookaburra/uploads/: KOOKABURRA.md
docs/design/kookabura_html_files/: app.jsx
docs/superpowers/plans/: 2026-04-19-workspace-default-cwd.md
docs/superpowers/specs/: 2026-04-19-empty-tile-slots-design.md  2026-04-19-workspace-default-cwd-design.md
