[package]
name = "kookaburra-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Domain types for Kookaburra — IDs, state, layout, actions."

[lints]
workspace = true

[dependencies]
bitflags = "2"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
directories = "5"
log = "0.4"
