[package]
name = "kookaburra-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PTY management for Kookaburra."

[lints]
workspace = true

[dependencies]
kookaburra-core = { path = "../kookaburra-core" }
portable-pty = "0.8"
parking_lot = "0.12"

# These are pulled in for the next pass that wires Term + the parser.
# Keeping them in the dep tree now means the next session doesn't need
# to add them and rebuild the lockfile.
alacritty_terminal = "0.26"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "time"] }
