[package]
name = "kookaburra-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "wgpu + glyphon rendering for Kookaburra."

[lints]
workspace = true

[dependencies]
kookaburra-core = { path = "../kookaburra-core" }
wgpu = "22.1"
winit = "0.30"
# Glyphon still pulls in FontSystem/fontdb for font discovery, but the
# live draw path (TextRenderer + TextAtlas + layout) is now replaced by
# our own instanced-quad glyph pipeline (see `glyph_pipeline.rs`).
glyphon = "0.6"
pollster = "0.4"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
# Direct font rasterization + atlas packing — bypasses cosmic-text's
# layout engine entirely for the monospace terminal hot path.
swash = "0.1"
etagere = "0.2"
# Strip / cards / dialogs live in egui. The render crate owns the
# `egui-wgpu::Renderer` so both passes (terminal glyphs + egui meshes)
# land in the same wgpu command encoder.
egui = "0.29"
egui-wgpu = "0.29"
