[package]
name = "kookaburra-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "egui strip, cards, and input routing for Kookaburra."

[lints]
workspace = true

[dependencies]
kookaburra-core = { path = "../kookaburra-core" }
